@@ -5,4 +5,4 @@ RUN ./gradlew clean -x test build
 
 FROM openjdk:21-jdk-slim AS backend
 COPY --from=build /app/cf-application/build/libs/*SNAPSHOT.jar /app.jar
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "--enable-preview", "-jar", "/app.jar"]
